--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,11 @@
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  i {
+    font-size: 3em;
+  }
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
