--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
+    <div class="navbar">
+      <%= link_to cocktails_path do %>
+        <i class="fas fa-beer"></i>
+      <% end %>
+      <%= link_to "New Cocktail", new_cocktail_path, class: "btn btn-success" %>
+    </div>
     <%= yield %>
   </body>
 </html>
