--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,12 +1,8 @@
-.cocktail-cards {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .cocktail-index-card {
   margin: 16px;
   height: 200px;
   width: 360px;
+  border-radius: 3px;
   position: relative;
   div {
     position: absolute;
