--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <%= link_to cocktails_path do %>
         <i class="fas fa-beer"></i>
       <% end %>
-      <%= link_to "New Cocktail", new_cocktail_path, class: "btn btn-success" %>
+      <%= link_to "New Cocktail", new_cocktail_path, class: "button-new" %>
     </div>
     <%= yield %>
   </body>
