--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,9 @@
 @import "pages/index";
 @import "pages/show";
 @import "cocktails";
+
+// body {
+//   background-image: asset-url('bubbles');
+//   background-size: cover;
+//   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0))
+// }
