--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,8 +1,8 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;700&family=Raleway:ital,wght@0,100;0,400;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;700&family=Xanh+Mono:ital@0;1&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Raleway', sans-serif;
+$body-font: 'Xanh Mono', monospace;
 $headers-font: 'Inknut Antiqua', serif;
 
 // To use a font file (.woff) uncomment following lines
