--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,22 +1,28 @@
-<div class="container">
-  <h1><%= @cocktail.name %></h1>
-  <img src="https://source.unsplash.com/featured/?cocktail" alt="cocktail photo" class="show-page-image">
-  <div class="ingredients">
-    <h3>Ingredients</h3>
-    <% @doses.each do |dose| %>
-      <p><bold><%= dose[:ingredient] %></bold> - <%= dose[:description] %>
-        <%= link_to dose_path(dose[:dose]), method: :delete, data: { confirm: "Are you sure?" } do %>
-        <i class="fas fa-minus-circle"></i>
+<div class="show-banner"></div>
+<div class="container show-container">
+  <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="cocktail photo" class="show-page-image">
+  <div class="cocktail-details">
+    <h1><%= @cocktail.name %></h1>
+    <div class="paper">
+      <div class="ingredients">
+        <h3>Ingredients</h3>
+        <% @doses.each do |dose| %>
+          <p>
+            <span class="ingredient"><%= dose.ingredient.name %></span>: <span class="description"><%= dose.description %></span>
+            <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
+            <i class="fas fa-minus-circle"></i>
+            <% end %>
+          </p>
         <% end %>
-      </p>
-    <% end %>
-  </div>
-  <div class="new-dose">
-    <h3>New Ingredient</h3>
-    <%= simple_form_for [@cocktail, @dose] do |f| %>
-      <%= f.association :ingredient %>
-      <%= f.input :description %>
-      <%= f.button :submit, class: "btn btn-primary", value: "Add Ingredient" %>
-    <% end %>
+      </div>
+    </div>
+    <div class="new-dose">
+      <h3>New Ingredient</h3>
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+        <%= f.association :ingredient %>
+        <%= f.input :description %>
+        <%= f.button :submit, class: "btn btn-primary", value: "Add Ingredient" %>
+      <% end %>
+    </div>
   </div>
 </div>
