--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,10 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;700&family=Xanh+Mono:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;700&family=Xanh+Mono:ital@0;1&family=Raleway:wght@200&display=swap');
 
 // Define fonts for body and headers
 $body-font: 'Xanh Mono', monospace;
 $headers-font: 'Inknut Antiqua', serif;
+$link-font: 'Raleway', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
