adding photos for cocktails

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index-banner">
+<div class="index-banner" style="background-image: url('<%= cl_image_path("kgx51xh9tl7itr4enct4") %>')">
   <div style="width: 50%">
     <h1>Cocktails</h1>
   </div>
