--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,6 +2,7 @@
   <h1 class="mt-5">New Cocktails</h1>
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
     <%= f.button :submit, class: 'btn btn-success' %>
   <% end %>
 </div>
