one more seed, particular picture on show page

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,7 @@
 <div class="index-banner" style="background-image: url('<%= cl_image_path("kgx51xh9tl7itr4enct4") %>')">
   <div style="width: 50%">
     <h1>Cocktails</h1>
+    <h4 class="ml-4">in film</h4>
   </div>
 </div>
 <div class="container">
