--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,6 @@
 <div class="show-banner" style="background-image: url('<%= cl_image_path("rwv8cocze07ltk2eztx6") %>')"></div>
 <div class="container show-container">
-  <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="cocktail photo" class="show-page-image">
+  <%= cl_image_tag @cocktail.photo.key, class: "show-page-image" %>
   <div class="cocktail-details">
     <div class="paper" style="background-image: url('<%= cl_image_path("ej7tod429pkvgoogkt8q") %>')">
       <h1><%= @cocktail.name %></h1>
