--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  background-color: transparent;
   i {
     font-size: 3em;
     color: black;
