--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="navbar">
+    <div class="navbar fixed-top">
       <%= link_to cocktails_path do %>
         <i class="fas fa-beer"></i>
       <% end %>
