--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;700&family=Xanh+Mono:ital@0;1&family=Raleway:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;700&family=Xanh+Mono:ital@0;1&family=Raleway:wght@200;400&display=swap');
 
 // Define fonts for body and headers
 $body-font: 'Xanh Mono', monospace;
