did js for navbar colour change

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -16,7 +16,7 @@
         <% end %>
       </div>
     </div>
-    <div class="new-dose">
+    <div class="new-dose-form">
       <h3>New Ingredient</h3>
       <%= simple_form_for [@cocktail, @dose] do |f| %>
         <%= f.association :ingredient %>
