--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,15 +2,20 @@
   display: flex;
   justify-content: space-between;
   background-color: transparent;
+  transition: 1s background-color ease;
   i {
     font-size: 3em;
     color: black;
   }
 }
 
+.navbar-white {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .navbar-lewagon .navbar-collapse {
