--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,7 +4,7 @@
     <h4 class="ml-4">in film</h4>
   </div>
 </div>
-<div class="container">
+<div class="container mb-5">
   <div class="cocktail-cards">
     <% @cocktails.each do |cocktail| %>
       <%= link_to cocktail_path(cocktail) do %>
