improved the dose dropdown styling and switching caret when menu open and closed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,6 @@
 //   background-size: cover;
 //   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0))
 // }
+.container {
+  margin-bottom: 20rem;
+}
