--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,6 +21,7 @@
   margin-top: 8px;
   .dose-form {
     display: none;
+    margin: 16px 8px;
   }
 }
 
@@ -36,5 +37,6 @@
   cursor: pointer;
   h3 {
     font-size: 1.3rem;
+    margin-bottom: 0;
   }
 }
