--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -20,7 +20,7 @@
       <div class="form-click">
         <h3>New Ingredient</h3>
         <i class="fas fa-caret-up" style='display: none'></i>
-        <i class="fas fa-caret-down"></i>
+        <i class="fas fa-caret-down visible" style='display: none'></i>
       </div>
       <div class="dose-form">
         <%= simple_form_for [@cocktail, @dose] do |f| %>
