--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,7 +9,9 @@
     <% @cocktails.each do |cocktail| %>
       <%= link_to cocktail_path(cocktail) do %>
         <div class="cocktail-index-card">
-          <%= cl_image_tag cocktail.photo.key, width: 240, height: 320, crop: :fill %>
+          <% if cocktail.photo.attached? %>
+            <%= cl_image_tag cocktail.photo.key, width: 240, height: 320, crop: :fill %>
+          <% end %>
           <h5 class="card-title"><%= cocktail.name %></h5>
         </div>
       <% end %>
